# Daily_Paper_RSS_AI_Enhance

./: .env.example  .gitignore  DISCLAIMER.md  DISCLAIMER_EN.md  README.md  README_EN.md  api_server.py  cleanup_jsonl.py  config.py  file-list.txt  index.html  logger_config.py  main.py  pyproject.toml  refresh_favorites_cache.py  test.py
ai/: enhance.py  structure.py  system.txt  template.txt  translate.py  zotero_recommender.py
assets/: file-list.txt
css/: style.css
fetcher/: abstract_extracter.py  rss_fetcher.py
js/: app.js
md/: convert_to_md.py  template.md
