[project]
name = "arxiv-rss-zotero"
version = "1.0.0"
description = "Daily arXiv RSS fetcher with AI enhancement and Zotero-based ranking"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.10",
    "arxiv>=2.1.3",
    "datetime>=5.5",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.3.9",
    "pyzotero>=1.6.11",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "openai>=1.0.0",
    "beautifulsoup4>=4.14.2",
    "langchain>=1.0.3",
    "langchain-deepseek>=1.0.0",
    "schedule>=1.2.2",
    "crawl4ai>=0.7.6",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
